assets/css/main.css
/**
 * Basic styling
 */
body, h1, h2, h3, h4, h5, h6,
p, blockquote, pre, hr,
dl, dd, ol, ul, figure {
  margin: 0;
  padding: 0;
}

@font-face {
  font-family: "brandon-grotesque",sans-serif;
}

body {
  /* we have 300 and 700 */
  font-weight: 300;
  color: #f7eedf;
  font-size: 1.3em;
  line-height: 1.5;
  font-weight: 300;
  background-color: #191621;
  -webkit-text-size-adjust: 100%;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: 700;
}

.hidden { 
  text-indent: -5000px;
}


/**
 * Links
 */
a {
  color: #77ccc9;
  text-decoration: none;
}

a:visited {
  color: #77ccc9;
}

a:hover {
  color:  #1eaaab;
  text-decoration: none;
}

.wf-loading {
  visibility: hidden;
}

.wf-active {
  visibility: visible;
}


/** 
* 
* homepage site name
* 
**/
.about {
  display:none;
  position:absolute;
  top:15px;
  right:40px;
}

/* Landscape phones and down */
@media (max-width: 480px) {
  .about {
      position:absolute;
      top:15px;
      right:20px;
    }
}

/* iPhone 6s and down  */
@media (max-width: 320px) {
.about {
      position:absolute;
      top:10px;
      right:7px;
    }
}



.about a {
  /* matches tagline */
  font-family: "brandon-grotesque",sans-serif;
  color: #cbcacc;
  text-transform: uppercase;
  font-size: 1.3em;
  text-align: center;
  font-weight: 400;
  text-shadow: 1px 1px black; 
}

.header {
  z-index: 10000;
  margin-top:-210px;
  padding-bottom:2px;
}

.black {
  background-color: black;
}

.sticky {
  position: -webkit-sticky;
  position: -moz-sticky;
  position: -ms-sticky;
  position: -o-sticky;
  position: sticky;
  top: 0px;
}

/* site title */
.site_name {
  margin:auto;
  margin-bottom:20px;
  padding:0;
  padding-top:10px;
  padding-bottom:5px;
  width:6em;
  font-family: orator-std ,sans-serif;
  transform: scaleY(1.1);
  font-style: normal;
  font-size: 2.0em;
  text-transform: uppercase;
  text-align: center;
  color: #f7eedf;
  letter-spacing: 1px;
  font-weight: 300;
  /* underline */
  border-bottom: 2px solid #f7eedf;
}

.site_name a {
  color: #f7eedf;
  text-decoration: none;
}

.site_name a:visited {
  color: #f7eedf;
}

.site_name a:hover {
  color: #f7eedf;
}


/**
 * 
 * Homepage
 * 
 **/
.hero-image { /* big hero astronaut image */
  background-image: url('/assets/img/lunarlandscape4.jpg');
  background-size:cover;
  background-position: center center;
  background-color: black;
  height: 230px;
  padding-top:50px;
}

.tagline  {
  width:100%;
  margin:0; padding:0;
  margin-top:175px;
  padding: 0 20px;
  padding-bottom:20px;
  text-align: center;
}

.tagline h2 {
  font-family: "brandon-grotesque",sans-serif;
  font-weight: 300;
  color: #7d7b80;
  text-transform: uppercase;
  font-size: 1.4em;
  text-align: center;
}
@media (max-width: 979px) {
.tagline h2 {
      /* color: #cbcacc; */
  }
}

.project-grid {
  padding: 10px 25px;
  margin: 0 auto;
}
/* Landscape phones and down */
@media (max-width: 480px) {
  .project-grid {
    padding: 10px 0px;
  }
}

.project-box {
  margin:0; padding:0;
  border: 10px solid #191621;
}

.project-box .dummy { 
  /* via http://www.bootply.com/99278 */
  margin-top: 100%;
}

.project-box .box-content {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  cursor: pointer;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: 100% 100%;
  padding-bottom: 100%; /* for css background image height is set via padding-bottom 
                        via http://stackoverflow.com/questions/25347987/how-to-cover-background-images-in-bootstrap-3-grids 
                        */
}

.project-box .circle {
  position: absolute;
  top: 17%;
  left: 0;
  right: 0;
  margin: auto;
  padding: 30px;
  width: 70%;
  height: 70%;
  border-radius: 50%; 
  text-align: center;
  text-transform: uppercase;
  background: black;
  background-color: #191621;
  overflow: hidden;
}

.project-box .circle .cat {
  text-align: center;
  position: absolute;
  left: 0;
  top: 26%;
  width: 100%;
  padding:0 20px;
  white-space: nowrap;

  color: #f7eedf;
  font-size: 2.2em; 
  font-family: orator-std ,sans-serif;
  font-weight: 300;
}

.project-box .circle h2 { /* project title */
  background: transparent;
  text-align: center;
  position: absolute;
  left: 0;
  top: 58%;
  width: 100%;
  padding:0 20px;
  color: #f7eedf;
  font-size: 2.2em; 
  font-family: orator-std ,sans-serif;
  font-weight: 300;
}
/* Portrait tablet to landscape and desktop */
@media (min-width: 768px) and (max-width: 979px) {
  .project-box .circle .cat, .project-box .circle h2  {
    font-size: 1.3em;
  }
}
/* Large desktop */
@media (min-width: 1200px) {
  .project-box .circle .cat, .project-box .circle h2  {
    font-size: 2.6em;
  }
}
@media (min-width: 1900px) {
  .project-box .circle .cat, .project-box .circle h2  {
    font-size: 4.0em;
  }
}
/* Landscape phones and down */
@media (max-width: 480px) {
  .project-box .circle .cat, .project-box .circle h2  {
    font-size: 2.0em;
  }
}

.tablet_indicator, .large_indicator, .xl_indicator, .mobile_indicator{
  display:none;
}
@media (min-width: 768px) and (max-width: 979px) {
  .tablet_indicator {
    display: block;
  }
}
@media (min-width: 1200px) and (max-width: 1899px) {
  .large_indicator {
    display: block;
  }
} 
@media (min-width: 1900px) {
   .xl_indicator {
    display: block;
  }
}
@media (max-width: 480px) {
   .mobile_indicator {
    display: block;
  }
}

.project-underline {
  position: absolute;
  top: 50%;
  left: 25%;
  margin: 0 auto;
  color: #f7eedf;
  width: 50%;
  border-bottom: 2px solid #f7eedf;
}


/** 
 * random pages
 */
.page {
  max-width:1200px;
  margin:0 auto;
}
.page p{
  margin:30px 30px;

}

/**
 * Posts aka project page
 */
/* project banner (full image is 4000 × 1200) */
.project_banner {
  margin-top:0;
}

.project-page {
  margin:0;
  padding: 30px 0;
}
/* project post main paragraph section */
.post-content {
  font-family: "brandon-grotesque",sans-serif;
  color: #f7eedf;
  font-size: 2.3em;
  font-weight: 100;
  margin-bottom: 30px;
  padding-top: 15px;
  padding-left: 45px;
  padding-right: 100px;
  line-height: 1.7;
  /* letter-spacing: 0.3em */
}
/* XL desktop */
@media (min-width: 1900px) {
  .post-content {
    font-size: 3.6em;
    padding-right:150px;
  }
}
/* Portrait tablet to landscape and desktop */
@media (min-width: 768px) and (max-width: 979px) {
  .post-content {
    padding-right: 70px;
    padding-left: 70px;  /* matches sidebar right padding  */
  }
}
/* Landscape phones and down */
@media (max-width: 480px) {
  .post-content {
    padding-right: 40px;
  }
}
/* iPhone 6s and down  */
@media (max-width: 320px) {
  .post-content {
    font-size: 1.8em;
  }
}

/* sidebar */
.sidebar {
  font-family: "brandon-grotesque",sans-serif;
  font-weight: 100;
  padding: 20px 30px 20px 85px;  
}
/* XL desktop */
@media (min-width: 1900px) {
  .sidebar {
    padding-left:150px;
  }    
}
/* Portrait tablet to landscape and desktop */
@media (min-width: 768px) and (max-width: 979px) {
  .sidebar {
    padding-left:70px;
  }    
}
/* Landscape phones and down */
@media (max-width: 480px) {
  .sidebar {
    padding: 30px 30px 0px 50px; 
  }   
}
/* iPhone 6s and down  */
@media (max-width: 320px) {
  .sidebar {
    font-style: .7em;
  }   
}

/* project title */
.sidebar h1 {
  font-family: "brandon-grotesque",sans-serif;
  text-transform: uppercase;
  font-size: 3.3em;
  font-weight: 900;
}
/* iPhone 6s and down  */
@media (max-width: 320px) {
  .sidebar {
    font-size: .9em;
  }   
}

/* project_links */
ul.project_links, ul.tags {
  list-style-type: none;
  font-size: 2.3em;
  margin: 30px 0 10px 0;
}

ul.project_links li {
  text-transform: lowercase;
  padding: 0; 
  padding-left:45px;
  padding-bottom: 5px;
}

ul.project_links li {
  color: #77ccc9;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;  
}

ul.project_links li a:hover {
  color:  #1eaaab;
  text-decoration: none;
}

.twitter, .facebook, .link {
  background-position: 0 15px;
  background-repeat: no-repeat;
}

.link {
  background-image: url("/assets/css/link.svg");
  background-repeat: no-repeat;
  background-size: 0.8em;
  background-position: 5px 13px;
}

.twitter {
  background-image: url("/assets/css/twitter.svg");
  background-size: 1.0em;
}

.facebook {
  background-image: url("/assets/css/facebook.svg");
  background-size: 0.9em;
  background-position: 5px 13px;
}


/* tags */
ul.tags a {
  color:  #f7eedf;
  text-decoration: none;
}

ul.tags {
    margin-top:40px;
}
/* Landscape phones and down */
@media (max-width: 480px) {
  ul.tags {
      margin-left:50px;
  }
}

ul.tags li {
  display: inline-block;
  padding: 0 10px;
  padding-bottom:5px;
  margin-right: 2px;
  margin-top:10px;
  white-space: nowrap;
  text-transform: lowercase;
  border: 1px solid #77ccc9;
  -moz-border-radius: 5px;
  border-radius: 5px;
}

ul.tags li:hover {
  background-color: #1eaaab;
  border: 1px solid #1eaaab;
}

.small_underline {
  border-bottom: 3px solid #f7eedf;
  margin: 20px 0 50px 0;
  width: 45px;
}

.image_credit {
  text-align: right;
  font-style: italic;
  padding:30px;
  font-size: .5em;
}


/**
 * generated previous pages scraped from old wordpress site;
 */
.scrape_from_old_wordpress img, .scrape_from_old_wordpress em:nth-of-type(1)  {
  /* hide the image and its caption */
  display:none;
}

.scrape_from_old_wordpress {
  padding:0; margin:0;
  margin-top:-30px;
}

.nobanner {
  height:100px;
}


/**
 * Page content - about page etc
 */
.page-content {
  padding: 30px 0;
}

.page-heading {
  font-size: 20px;
}

.post-list {
  margin-left: 0;
  list-style: none;
}

.post-list > li {
  margin-bottom: 30px;
}

.post-meta {
  font-size: 14px;
  color: #828282;
}


/**
 * Tag page
 */

 /* janky as fix for footer that won't stick to bootom #todo */
.tag-page {
  min-height: 550px; 
}
/* XL desktop */
@media (min-width: 1900px) {
  .tag-page {
    min-height: 1000px; 
  }
}
/* Large desktop */
@media (min-width: 1200px) {
  .tag-page {
    min-height: 700px; 
  }
}
/* Large desktop */
@media (min-width: 1000px) {
  .tag-page {
    min-height: 1200px; 
  }
}
/* Portrait tablet to landscape and desktop */
@media (min-width: 768px) and (max-width: 979px) {
  .tag-page {
    min-height: 900px; 
  }
}
/* end janky fix */


.tag-page .heading {
  /* match the ul.tags li */
  text-align: center;
  margin:20px auto;
}

.tag-page .heading h1 {
  font-weight: 300;
  font-size: 2.1em;
  color:  #f7eedf;
  white-space: nowrap;
  display:inline-block;
  padding: 0 10px 5px 10px;
  text-transform: lowercase;
  border: 1px solid #77ccc9;
  -moz-border-radius: 5px;
  border-radius: 5px;
}


/**
 * Site footer
 */
.site-footer {
  margin:0;
  font-family: "brandon-grotesque",sans-serif;
  text-align: right;
  font-size:1.1em;
  margin-top:25px;
  padding:15px 40px;
  background-color: black;
  text-transform: uppercase;
}


.site-footer a {
  color: #7d7b80;
}
@media (max-width: 979px) {
  .site-footer a {
    color: #cbcacc;
  }
}



/** 
 * About page
 */ 
.about-page {
  font-family: "brandon-grotesque",sans-serif;
  color: #f7eedf;
  font-size: 2.3em;
  font-weight: 100;
  padding: 0 5%;
  margin: 40px 0;
}
.about-page img {
  padding-top:10px;

}
.about-page .bio {
  /* font-size: .8em; */
}

.about-page .row {
  padding-bottom:40px;
}

/**
 * Blockquotes
 */
blockquote {
  border-left: 4px solid #f7eedf;
  padding-left: 15px;
  font-size: 18px;
  letter-spacing: -1px;
  font-style: italic;
}

blockquote > :last-child {
  margin-bottom: 0;
}




/**
 * Icons
 */
.icon > svg {
  display: inline-block;
  width: 16px;
  height: 16px;
  vertical-align: middle;
}

.icon > svg path {
  fill: #828282;
}

